@@ -1,3 +1,9 @@
+2019-11-30  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* In standard and editable combo-boxes, rename selection_changed()
+	to on_selection_changed(), for consistency. Throw an exception
+	if the wrong on_selection_changed() gets called.
+
 2019-10-14  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* grid and item layout managers: remove_rows() and remove_items().
